syntax = "proto3";
package io.cucumber.messages;
option ruby_package = "Cucumber.Messages";

// All "outer" (self contained) messages that are of this type
message Wrapper {
  oneof message {
    Source source = 1;
    GherkinDocument gherkinDocument = 2;
    Pickle pickle = 3;
    Attachment attachment = 4;
  }
}

////// Source

message Location {
  uint32 line = 1;
  uint32 column = 2;
}

message Attachment {
  SourceReference source = 1;
  string data = 2;
  Media media = 3;
}

message Media {
  string encoding = 1;
  string content_type = 2;
}

message Source {
  string uri = 1;
  string data = 2;
  Media media = 3;
}

message SourceReference {
  string uri = 1;
  Location location = 2;
}

////// Gherkin

message GherkinDocument {
  string uri = 1;
  Feature feature = 2;
  repeated Comment comments = 3;
}

message Feature {
  Location location = 1;
  repeated Tag tags = 2;
  string language = 3;
  string keyword = 4;
  string name = 5;
  string description = 6;
  repeated FeatureChild children = 7;
}

message FeatureChild {
  oneof value {
    Rule rule = 1;
    Background background = 2;
    Scenario scenario = 3;
  }
}

message Rule {
  Location location = 1;
  string keyword = 2;
  string name = 3;
  string description = 4;
  repeated RuleChild children = 5;
}

message RuleChild {
  oneof value {
    Background background = 1;
    Scenario scenario = 2;
  }
}

message Background {
  Location location = 1;
  string keyword = 2;
  string name = 3;
  string description = 4;
  repeated Step steps = 5;
}

message Scenario {
  Location location = 1;
  repeated Tag tags = 2;
  string keyword = 3;
  string name = 4;
  string description = 5;
  repeated Step steps = 6;
  repeated Examples examples = 7;
}

message Comment {
  Location location = 1;
  string text = 2;
}

message DataTable {
  Location location = 1;
  repeated TableRow rows = 2;
}

message DocString {
  Location location = 1;
  string content_type = 2;
  string content = 3;
  string delimiter = 4;
}

message Examples {
  Location location = 1;
  repeated Tag tags = 2;
  string keyword = 3;
  string name = 4;
  string description = 5;
  TableRow table_header = 6;
  repeated TableRow table_body = 7;
}

message Step {
  Location location = 1;
  string keyword = 2;
  string text = 3;
  oneof argument {
    DocString doc_string = 5;
    DataTable data_table = 6;
  }
}

message TableCell {
  Location location = 1;
  string value = 2;
}

message TableRow {
  Location location = 1;
  repeated TableCell cells = 2;
}

message Tag {
  Location location = 1;
  string name = 2;
}

////// Pickles

message Pickle {
  string uri = 1;
  string name = 2;
  string language = 3;
  repeated PickleStep steps = 4;
  repeated PickleTag tags = 5;
  repeated Location locations = 6;
}

message PickleDocString {
  Location location = 1;
  string contentType = 2;
  string content = 3;
}

message PickleStep {
  string text = 1;
  repeated Location locations = 2;
  oneof argument {
    PickleDocString doc_string = 3;
    PickleTable data_table = 4;
  }}

message PickleTable {
  repeated PickleTableRow rows = 1;
}

message PickleTableCell {
  Location location = 1;
  string value = 2;
}

message PickleTableRow {
  repeated PickleTableCell cells = 1;
}

message PickleTag {
  Location location = 1;
  string name = 2;
}

